==> ycsin/zephyr/drivers/counter/counter_stm32_rtc.c <==
#define DT_DRV_COMPAT st_stm32_rtc
#include <time.h>
#include <zephyr/drivers/clock_control/stm32_clock_control.h>
#include <zephyr/intc2.h>
#include <zephyr/drivers/clock_control.h>
#include <zephyr/drivers/interrupt_controller/intc_exti_stm32.h>
#include <zephyr/sys/util.h>
#include <zephyr/kernel.h>
#include <soc.h>
#include <stm32_bitops.h>
#include <stm32_ll_cortex.h>
#include <stm32_ll_exti.h>
#include <stm32_ll_pwr.h>
#include <stm32_ll_rcc.h>
#include <stm32_ll_rtc.h>
#include <zephyr/drivers/counter.h>
#include <zephyr/sys/timeutil.h>
#include <zephyr/pm/device.h>
#include <zephyr/logging/log.h>
#include <zephyr/irq.h>
#include <stm32_backup_domain.h>
#include <stm32_hsem.h>
#define STM32_RTC_HOUR_FORMAT_24HOUR		LL_RTC_HOUR_FORMAT_24HOUR
#define STM32_RTC_HOUR_FORMAT_AMPM		LL_RTC_HOUR_FORMAT_AMPM
#define STM32_RTC_TIME_FORMAT_AM_24H		LL_RTC_TIME_FORMAT_AM_24H
#define STM32_RTC_GET_SECOND			LL_RTC_GET_SECOND
#define STM32_RTC_GET_MINUTE			LL_RTC_GET_MINUTE
#define STM32_RTC_GET_HOUR			LL_RTC_GET_HOUR
#define STM32_RTC_GET_DAY			LL_RTC_GET_DAY
#define STM32_RTC_GET_WEEKDAY			LL_RTC_GET_WEEKDAY
#define STM32_RTC_GET_YEAR			LL_RTC_GET_YEAR
#define STM32_RTC_GET_MONTH			LL_RTC_GET_MONTH
#define STM32_RTC_EnableBypassShadowReg		LL_RTC_EnableBypassShadowReg
#define STM32_RTC_DisableBypassShadowReg	LL_RTC_DisableBypassShadowReg
#define STM32_ARG(dev, ...)	__VA_ARGS__
#define STM32_RTC_HOUR_FORMAT_24HOUR		LL_RTC_HOURFORMAT_24HOUR

void rtc_stm32_isr(const struct device *dev)
{
	struct rtc_stm32_data *data = dev->data;
	counter_alarm_callback_t alarm_callback = data->callback;

	uint32_t now = rtc_stm32_read(dev);

	if (ll_is_active_alarm() != 0
#ifdef CONFIG_COUNTER_RTC_STM32_SUBSECONDS
	    || (data->irq_on_late && ll_isenabled_interrupt_alarm())
#endif /* CONFIG_COUNTER_RTC_STM32_SUBSECONDS */
	) {

		stm32_backup_domain_enable_access();
		LL_RTC_DisableWriteProtection(STM32_ARG(RTC));
		ll_clear_alarm_flag();
		ll_disable_interrupt_alarm();
		ll_disable_alarm();
		LL_RTC_EnableWriteProtection(STM32_ARG(RTC));
		stm32_backup_domain_disable_access();
#ifdef CONFIG_COUNTER_RTC_STM32_SUBSECONDS
		data->irq_on_late = false;
#endif /* CONFIG_COUNTER_RTC_STM32_SUBSECONDS */

		if (alarm_callback != NULL) {
			data->callback = NULL;
			alarm_callback(dev, 0, now, data->user_data);
		}
	}

#if defined(RTC_EXTI_LINE_NUM)
	stm32_exti_clear_pending(RTC_EXTI_LINE_NUM);
#endif /* defined(RTC_EXTI_LINE_NUM) */
}

static int rtc_stm32_init(const struct device *dev)
{
	const struct device *const clk = DEVICE_DT_GET(STM32_CLOCK_CONTROL_NODE);
	const struct rtc_stm32_config *cfg = dev->config;
	struct rtc_stm32_data *data = dev->data;
	int ret = -EIO;

	data->callback = NULL;

	/* Enable RTC bus clock */
	if (clock_control_on(clk, (clock_control_subsys_t) &cfg->pclken[0]) != 0) {
		LOG_ERR("clock op failed");
		return -EIO;
	}

	/* Enable Backup access */
	z_stm32_hsem_lock(CFG_HW_RCC_SEMID, HSEM_LOCK_DEFAULT_RETRY);

	stm32_backup_domain_enable_access();

#if DT_INST_CLOCKS_CELL_BY_IDX(0, 1, bus) == STM32_SRC_HSE
	/* Must be configured before selecting the RTC clock source */
	LL_RCC_SetRTC_HSEPrescaler(cfg->hse_prescaler);
#endif

	/* Enable RTC clock source */
	if (clock_control_configure(clk,
				    (clock_control_subsys_t) &cfg->pclken[1],
				    NULL) != 0) {
		LOG_ERR("clock configure failed");
		goto out_disable_bkup_access;
	}

#if !defined(CONFIG_SOC_SERIES_STM32WBAX)
#ifdef CONFIG_SOC_SERIES_STM32U3X
	/* STM32U3 series uses LL_RCC_RTC_ClockEnable instead of LL_RCC_EnableRTC */
	LL_RCC_RTC_ClockEnable();
#else
	LL_RCC_EnableRTC();
#endif /* CONFIG_SOC_SERIES_STM32U3X */
#endif /* !CONFIG_SOC_SERIES_STM32WBAX */

	z_stm32_hsem_unlock(CFG_HW_RCC_SEMID);

#if !defined(CONFIG_COUNTER_RTC_STM32_SAVE_VALUE_BETWEEN_RESETS)
	ret = rtc_stm32_deinit();
	if (ret < 0) {
		LOG_ERR("Failed to deinit RTC");
		goto out_disable_bkup_access;
	}
#endif

	ret = rtc_stm32_configure(dev);
	if (ret < 0) {
		LOG_ERR("Failed to init RTC");
		goto out_disable_bkup_access;
	}

#ifdef RTC_CR_BYPSHAD
	LL_RTC_DisableWriteProtection(STM32_ARG(RTC));
	STM32_RTC_EnableBypassShadowReg(STM32_ARG(RTC));
	LL_RTC_EnableWriteProtection(STM32_ARG(RTC));
#endif /* RTC_CR_BYPSHAD */

#if defined(RTC_EXTI_LINE_NUM)
	/* Trigger NVIC IRQ on RTC EXTI line rising edge */
	ret = stm32_exti_enable(RTC_EXTI_LINE_NUM,
				STM32_EXTI_TRIG_RISING,
				STM32_EXTI_MODE_IT);
	if (ret < 0) {
		LOG_ERR("Failed to enable RTC EXTI line");
		goto out_disable_bkup_access;
	}
#endif /* defined(RTC_EXTI_LINE_NUM) */

out_disable_bkup_access:
	stm32_backup_domain_disable_access();

	if (ret == 0) {
		rtc_stm32_irq_config(dev);
	}

	return ret;
}
